Plugins/iOS/ImSDK_iOS_C.xcframework/ios-arm64_armv7/ImSDK_iOS_C.framework/Headers/TIMCloudCallback.h


typedef void (*TIMRecvNewMsgCallback)(const char* json_msg_array, const void* user_data);