Assets/TencentIMSDK/Plugins/iOS/ImSDK_iOS_C.xcframework/ios-arm64_armv7/ImSDK_iOS_C.framework/Headers/TIMCommunityManager.h


TIM_API int TIMCommunityCreate(const char* json_group_create_param, TIMCommCallback cb, const void* user_data);
TIM_API int TIMCommunityGetJoinedCommunityList(TIMCommCallback cb, const void* user_data);
TIM_API int TIMCommunityCreateTopicInCommunity(const char* group_id, const char* json_topic_info, TIMCommCallback cb,
                                               const void* user_data);
TIM_API int TIMCommunityDeleteTopicFromCommunity(const char* group_id, const char* json_topic_id_array,
                                                 TIMCommCallback cb, const void* user_data);
TIM_API int TIMCommunitySetTopicInfo(const char* json_topic_info, TIMCommCallback cb, const void* user_data);
TIM_API int TIMCommunityGetTopicInfoList(const char* group_id, const char* json_topic_id_array, TIMCommCallback cb,
                                         const void* user_data);
TIM_API int TIMCommunitySetTopicInheritMessageReceiveOptionFromCommunity(const char* topic_id, bool isInherit,
                                                                         TIMCommCallback cb, const void* user_data);
TIM_API int TIMCommunityCreatePermissionGroupInCommunity(const char* json_permission_group_info, TIMCommCallback cb,
                                                         const void* user_data);
TIM_API int TIMCommunityDeletePermissionGroupFromCommunity(const char* group_id,
                                                           const char* json_permission_group_id_array,
                                                           TIMCommCallback cb, const void* user_data);
TIM_API int TIMCommunityModifyPermissionGroupInfoInCommunity(const char* json_permission_group_info, TIMCommCallback cb,
                                                             const void* user_data);
TIM_API int TIMCommunityGetJoinedPermissionGroupListInCommunity(const char* group_id, TIMCommCallback cb,
                                                                const void* user_data);
TIM_API int TIMCommunityGetPermissionGroupListInCommunity(const char* group_id,
                                                          const char* json_permission_group_id_array,
                                                          TIMCommCallback cb, const void* user_data);
TIM_API int TIMCommunityAddCommunityMembersToPermissionGroup(const char* group_id, const char* permission_group_id,
                                                             const char* json_member_id_array, TIMCommCallback cb,
                                                             const void* user_data);
TIM_API int TIMCommunityRemoveCommunityMembersFromPermissionGroup(const char* group_id, const char* permission_group_id,
                                                                  const char* json_member_id_array, TIMCommCallback cb,
                                                                  const void* user_data);
TIM_API int TIMCommunityGetCommunityMemberListInPermissionGroup(const char* group_id, const char* permission_group_id,
                                                                const char* next_cursor, TIMCommCallback cb,
                                                                const void* user_data);
TIM_API int TIMCommunityAddTopicPermissionToPermissionGroup(const char* group_id, const char* permission_group_id,
                                                            const char* json_topic_permission_map, TIMCommCallback cb,
                                                            const void* user_data);
TIM_API int TIMCommunityDeleteTopicPermissionFromPermissionGroup(const char* group_id, const char* permission_group_id,
                                                                 const char* json_topic_id_array, TIMCommCallback cb,
                                                                 const void* user_data);
TIM_API int TIMCommunityModifyTopicPermissionInPermissionGroup(const char* group_id, const char* permission_group_id,
                                                               const char* json_topic_permission_map,
                                                               TIMCommCallback cb, const void* user_data);
TIM_API int TIMCommunityGetTopicPermissionInPermissionGroup(const char* group_id, const char* permission_group_id,
                                                            const char* json_topic_id_array, TIMCommCallback cb,
                                                            const void* user_data);