Assets/TencentIMSDK/Native/NativeSDK.cs


    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipAddFriend(IntPtr json_add_friend_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipHandleFriendAddRequest(IntPtr json_handle_friend_add_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipModifyFriendProfile(IntPtr json_modify_friend_info_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipDeleteFriend(IntPtr json_delete_friend_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipCheckFriendType(IntPtr json_check_friend_list_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipCreateFriendGroup(IntPtr json_create_friend_group_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipGetFriendGroupList(IntPtr json_get_friend_group_list_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipModifyFriendGroup(IntPtr json_modify_friend_group_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipDeleteFriendGroup(IntPtr json_delete_friend_group_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipAddToBlackList(IntPtr json_add_to_blacklist_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipGetBlackList(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipDeleteFromBlackList(IntPtr json_delete_from_blacklist_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipGetPendencyList(IntPtr json_get_pendency_list_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipDeletePendency(IntPtr json_delete_pendency_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipReportPendencyReaded(ulong time_stamp, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipSearchFriends(IntPtr json_search_friends_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipGetFriendsInfo(IntPtr json_get_friends_info_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int callExperimentalAPI(IntPtr json_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFollowUser(IntPtr json_user_id_list, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMUnfollowUser(IntPtr json_user_id_list, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetMyFollowingList(IntPtr next_cursor, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetMyFollowersList(IntPtr next_cursor, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetMutualFollowersList(IntPtr next_cursor, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetUserFollowInfo(IntPtr json_user_id_list, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCheckFollowType(IntPtr json_user_id_list, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSubscribeOfficialAccount(IntPtr official_account_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMUnsubscribeOfficialAccount(IntPtr official_account_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetOfficialAccountsInfo(IntPtr json_official_account_id_list, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSignalingInvite(IntPtr invitee, IntPtr data, bool online_user_only, IntPtr json_offline_push_info, int timeout, StringBuilder invite_id_buffer, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSignalingInviteInGroup(IntPtr group_id, IntPtr json_invitee_array, IntPtr data, bool online_user_only, int timeout, StringBuilder invite_id_buffer, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSignalingCancel(IntPtr invite_id, IntPtr data, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSignalingAccept(IntPtr invite_id, IntPtr data, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSignalingReject(IntPtr invite_id, IntPtr data, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetSignalingInfo(IntPtr json_msg, CommonValueCallback json_signaling_info_cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSignalingModifyInvitation(IntPtr invite_id, IntPtr data, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityCreate(IntPtr json_community_create_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityGetJoinedCommunityList(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityCreateTopicInCommunity(IntPtr group_id, IntPtr json_topic_info, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityDeleteTopicFromCommunity(IntPtr group_id, IntPtr json_topic_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunitySetTopicInfo(IntPtr json_topic_info, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityGetTopicInfoList(IntPtr group_id, IntPtr json_topic_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunitySetTopicInheritMessageReceiveOptionFromCommunity(IntPtr topic_id, bool isInherit, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityCreatePermissionGroupInCommunity(IntPtr json_permission_group_info, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityDeletePermissionGroupFromCommunity(IntPtr group_id, IntPtr json_permission_group_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityModifyPermissionGroupInfoInCommunity(IntPtr json_permission_group_info, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityGetJoinedPermissionGroupListInCommunity(IntPtr group_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityGetPermissionGroupListInCommunity(IntPtr group_id, IntPtr json_permission_group_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityAddCommunityMembersToPermissionGroup(IntPtr group_id, IntPtr permission_group_id, IntPtr json_member_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityRemoveCommunityMembersFromPermissionGroup(IntPtr group_id, IntPtr permission_group_id, IntPtr json_member_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityGetCommunityMemberListInPermissionGroup(IntPtr group_id, IntPtr permission_group_id, IntPtr next_cursor, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityAddTopicPermissionToPermissionGroup(IntPtr group_id, IntPtr permission_group_id, IntPtr json_topic_permission_map, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityDeleteTopicPermissionFromPermissionGroup(IntPtr group_id, IntPtr permission_group_id, IntPtr json_topic_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityModifyTopicPermissionInPermissionGroup(IntPtr group_id, IntPtr permission_group_id, IntPtr json_topic_permission_map, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMCommunityGetTopicPermissionInPermissionGroup(IntPtr group_id, IntPtr permission_group_id, IntPtr json_topic_id_array, CommonValueCallback cb, IntPtr user_data);



    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMAddRecvNewMsgCallback(TIMRecvNewMsgCallback cb, IntPtr user_data);
